--- a/history.css
+++ b/history.css
@@ -2,12 +2,13 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: "Inria Sans", sans-serif;
+    font-family: 'Inria Sans', sans-serif !important;
 }
 
 header{
     background-color:  #f8f8f8;
 }
+
 
 body{
     background-color: white;
@@ -17,8 +18,9 @@ body{
 
 h1{
     font-size: 1.8rem;
-    color: black;
+    color: white;
     width: 25%;
+    font-weight: 700;
     /* border: solid 2px blue; */
 }
 
@@ -27,6 +29,7 @@ h1{
 }
 
 .active-nav{
+    color: white;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -34,14 +37,14 @@ h1{
 .nav-link{
     font-weight: 600;
     font-size: 1.2rem;
-    color: black;
+    color: white;
     text-decoration: none;
     font-style: normal;
 }
 
 .nav-link:hover,
 .nav-link:active{
-    color: rgb(79, 79, 79);
+    color: rgb(159, 159, 159);
 }
 
 /* Header Layout */
@@ -53,10 +56,12 @@ nav{
 
 header{
     padding: 2em 0;
+    background-color: black;
+    border-radius: 0 0 70px 70px;
 }
 
 .nav-container .i{
-    color: black;
+    color: white;
     font-size: 2.5rem;
     text-align: end;
     width: 20%;
@@ -101,7 +106,6 @@ header{
     }
 
     .nav-container i{
-        display: none;
         text-align: center;
         width: 100%;
     }
@@ -115,6 +119,7 @@ header{
 h2{
     font-size: 2.5rem;
     text-align: center;
+    font-weight: 700;
 }
 
 .last-date{
@@ -124,6 +129,8 @@ h2{
 }
 
 .description{
+    font-weight: 500;
+    color: black;
     font-size: 1.1rem;
 }
 
@@ -154,7 +161,13 @@ span{
 h3{
     font-size: 2rem;
     text-decoration: underline;
-    margin-bottom: 0.5em;
+    font-weight: 700;
+}
+
+.link-description {
+    font-weight: 700;
+    color: black;
+    font-size: 1.2rem;
 }
 /* Section Layout */ 
 
@@ -163,7 +176,7 @@ h3{
     align-items: center;
     gap: 10px;
     margin-bottom: 1em;
-    margin-top: 1.5em;
+    margin-top: 3em;
 }
 
 .history-title{
@@ -229,6 +242,9 @@ h3{
 }
 
 .image-title{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 50%;
 }
 
@@ -272,6 +288,7 @@ img{
 }
 
 .active-nav-footer{
+    color: white;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
