--- a/future.css
+++ b/future.css
@@ -6,8 +6,9 @@
 }
 
 header{
-    background-color:  #f8f8f8;
-    position: sticky;
+    padding: 2em 0;
+    background-color: black;
+    border-radius: 0 0 70px 70px;
 }
 
 body{
@@ -17,8 +18,9 @@ body{
 /* Typography */
 
 h1{
+    font-weight: 700;
     font-size: 1.8rem;
-    color: black;
+    color: white;
     width: 25%;
     /* border: solid 2px blue; */
 }
@@ -35,14 +37,14 @@ h1{
 .nav-link{
     font-weight: 600;
     font-size: 1.2rem;
-    color: black;
+    color: white;
     text-decoration: none;
     font-style: normal;
 }
 
 .nav-link:hover,
 .nav-link:active{
-    color: rgb(79, 79, 79);
+    color: rgb(159, 159, 159);
 }
 
 /* Header Layout */
@@ -57,7 +59,7 @@ header{
 }
 
 .nav-container .i{
-    color: black;
+    color: white;
     font-size: 2.5rem;
     text-align: end;
     width: 20%;
@@ -102,7 +104,6 @@ header{
     }
 
     .nav-container i{
-        display: none;
         text-align: center;
         width: 100%;
     }
@@ -114,22 +115,29 @@ header{
 /* Typography */
 
 h2{
+    font-weight: 700;
     text-align: center;
     width: 50%;
     font-size: 3rem;
 }
 
 h3{
+    font-weight: 700;
     text-decoration: underline;
     margin-top: 2em;
     font-size: 2rem;
     text-align: center;
+}
+
+.active-nav{
+    color: white;
     text-decoration: underline;
-    text-underline-offset: 8px;
+    text-underline-offset: 5px;
 }
 
 .description{
     font-size: 1.1rem;
+    color: black;
 }
 
 img{
@@ -150,7 +158,7 @@ span{
 /* Section layout */
 
 .history{
-    margin-top: 2.5rem;
+    margin-top: 3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -216,6 +224,7 @@ span{
 }
 
 .active-nav-footer{
+    color: white;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
