--- a/homepage.css
+++ b/homepage.css
@@ -10,15 +10,17 @@ header{
     position: sticky;
 }
 
-body{
+body {
     background-color: white;
 }
+
 
 /* Typography */
 
 h1{
+    font-weight: 700;
     font-size: 1.8rem;
-    color: black;
+    color: white;
     width: 25%;
     /* border: solid 2px blue; */
 }
@@ -28,6 +30,7 @@ h1{
 }
 
 .active-nav{
+    color: white;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -35,14 +38,14 @@ h1{
 .nav-link{
     font-weight: 600;
     font-size: 1.2rem;
-    color: black;
+    color: white;
     text-decoration: none;
     font-style: normal;
 }
 
 .nav-link:hover,
 .nav-link:active{
-    color: rgb(79, 79, 79);
+    color: rgb(159, 159, 159);
 }
 
 /* Header Layout */
@@ -54,10 +57,12 @@ nav{
 
 header{
     padding: 2em 0;
+    background-color: black;
+    border-radius: 0 0 70px 70px;
 }
 
 .nav-container .i{
-    color: black;
+    color: white;
     font-size: 2.5rem;
     text-align: end;
     width: 20%;
@@ -97,12 +102,12 @@ header{
     }
 
     h1{
+        font-size: 1.5rem;
         text-align: center;
         width: 100%;
     }
 
     .nav-container i{
-        display: none;
         text-align: center;
         width: 100%;
     }
@@ -114,6 +119,7 @@ header{
 /* Typography */
 
 h2{
+    font-weight: 700;
     font-size: 4.5rem;
     text-align: center;
     color: black;
@@ -130,6 +136,7 @@ h2{
     text-align: center;
     font-size: 1.3rem;
     margin-top: 1em;
+    
 }
 
 .box i{
@@ -140,6 +147,8 @@ h2{
 }
 
 h3{
+    font-size: 1.3rem;
+    font-weight: 700;
     margin-top: 0.8em;
     text-align: center;
     text-decoration: underline;
@@ -148,7 +157,7 @@ h3{
 /* Section layout */
 
 .section{
-    margin-top: 2em;
+    margin-top: 4em;
 }
 
 
@@ -204,11 +213,11 @@ h3{
     }
 
     .box{
-        width: 70%;
+        width: 90%;
     }
 
     .meaning{
-        width: 70%;
+        width: 90%;
     }
 }
 
@@ -225,6 +234,7 @@ h3{
 }
 
 .active-nav-footer{
+    color: white;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
