--- a/technology.css
+++ b/technology.css
@@ -6,19 +6,22 @@
 }
 
 header{
-    background-color:  #f8f8f8;
-    position: sticky;
+    padding: 2em 0;
+    background-color: black;
+    border-radius: 0 0 70px 70px;
 }
 
 body{
     background-color: white;
+    font-family: 'Inria Sans', sans-serif !important;
 }
 
 /* Typography */
 
 h1{
+    font-weight: 700;
     font-size: 1.8rem;
-    color: black;
+    color: white;
     width: 25%;
     /* border: solid 2px blue; */
 }
@@ -28,6 +31,7 @@ h1{
 }
 
 .active-nav{
+    color: white;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -35,14 +39,14 @@ h1{
 .nav-link{
     font-weight: 600;
     font-size: 1.2rem;
-    color: black;
+    color: white;
     text-decoration: none;
     font-style: normal;
 }
 
 .nav-link:hover,
 .nav-link:active{
-    color: rgb(79, 79, 79);
+    color: rgb(159, 159, 159);
 }
 
 /* Header Layout */
@@ -57,7 +61,7 @@ header{
 }
 
 .nav-container .i{
-    color: black;
+    color: white;
     font-size: 2.5rem;
     text-align: end;
     width: 20%;
@@ -102,7 +106,6 @@ header{
     }
 
     .nav-container i{
-        display: none;
         text-align: center;
         width: 100%;
     }
@@ -113,13 +116,28 @@ header{
 
 /* Typography */
 
+
+.top-bootstrap {
+    font-weight: 700;
+    color: black;
+    font-size: 1.2rem;
+}
+
+.link-description {
+    font-weight: 700;
+    color: white;
+    font-size: 1.2rem;
+}
+
 h2{
-    margin-top: 2rem;
+    font-weight: 700;
+    margin-top: 3rem;
     text-align: center;
-    font-size: 3.5rem;
+    font-size: 3.3rem;
 }
 
 h3{
+    font-weight: 700;
     font-size: 2rem;
     margin-top: 3.5rem;
     text-decoration: underline;
@@ -142,6 +160,8 @@ img{
 
 .description{
     font-size: 1.1rem;
+    font-weight: 500;
+    color: black;
 }
 
 .terms-paragraph{
@@ -149,6 +169,11 @@ img{
 }
 
 /* Section Layout */
+
+.image-description{
+    display: flex;
+    flex-direction: column;
+}
 
 .technology-image{
     margin-top: 2em;
@@ -193,6 +218,9 @@ img{
 }
 
 .terms-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     padding: 1em;
     width: 48%;
     background-color: black;
@@ -229,6 +257,7 @@ img{
 }
 
 .active-nav-footer{
+    color: white;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
